--- a/wlogout/colors.css
+++ b/wlogout/colors.css
@@ -1,20 +1,19 @@
-@define-color foreground #FEC6AC;
-@define-color background rgba(1,0,6,0.50);
-@define-color cursor #FEC6AC;
-
-@define-color color0 #010006;
-@define-color color1 #353243;
-@define-color color2 #622429;
-@define-color color3 #52404A;
-@define-color color4 #8F2224;
-@define-color color5 #735354;
-@define-color color6 #BD450E;
-@define-color color7 #F5A580;
-@define-color color8 #AC745A;
-@define-color color9 #474359;
-@define-color color10 #833037;
-@define-color color11 #6E5663;
-@define-color color12 #BF2D30;
-@define-color color13 #996E70;
-@define-color color14 #FC5C13;
-@define-color color15 #F5A580;
+@define-color foreground #f0f0f0;
+@define-color background rgba(1,5,20,0.65);
+@define-color cursor #f0f0f0;
+@define-color color0 #010615;
+@define-color color1 #3152a8;
+@define-color color2 #4b2c8c;
+@define-color color3 #7649ac;
+@define-color color4 #1f5bab;
+@define-color color5 #9b3e7c;
+@define-color color6 #0f87c2;
+@define-color color7 #c8c8ff;
+@define-color color8 #4a5984;
+@define-color color9 #ff5b77;
+@define-color color10 #7542cb;
+@define-color color11 #00caff;
+@define-color color12 #fe2b6e;
+@define-color color13 #a755e7;
+@define-color color14 #14ddff;
+@define-color color15 #f0f0ff;
