--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,4 +1,5 @@
 @import "macchiato.css";
+@import "theme.css";
 
 * {
     font-family: "JetBrainsMono Nerd Font", Roboto, Helvetica, Arial, sans-serif;
